# wetSAXS

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
lib/: CMakeLists.txt
src/base/: Aligner.cpp  Aligner.h  AtomisticModel.cpp  AtomisticModel.h  CMakeLists.txt  Ensemble.cpp  Ensemble.h  Fit.cpp  Fit.h  HCPGridModel.cpp  HCPGridModel.h  Result.h  SBESJY.cpp  SBESJY.h  SVD.h  SphericalBessels.cpp  SphericalBessels.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Waters.cpp  Waters.h  functions_WETSAXS.cpp  functions_WETSAXS.h
src/fsrc/: CMakeLists.txt  nnls.cc  nnls.h  sparseMatrix.cc
tests/: Aligner.cpp  AtomisticModel.cpp  CMakeLists.txt  Ensemble.cpp  Fit.cpp  HCPGridModel.cpp  SBESJY.cpp  SVD.cpp  SphericalBessels.cpp  SphericalHarmonics.cpp  Waters.cpp  functions_WETSAXS.cpp  support.hpp.in
tests/fixtures/: aligner.txt
